# SmoothRPC

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  python-app.yml  release.yml
SmoothRPC/: __init__.py  exceptions.py  network.py  smoothrpc.py  zmqrpc.py
example/: __init__.py  client.py  commands.py  host.py  server.py
smooth_rpc/: __init__.py  exceptions.py  network.py  smoothrpc.py
tests/: __init__.py  conftest.py  test_convenience.py  test_network.py  test_smoothrpc.py  test_smoothrpc_client.py  test_smoothrpc_host.py
