[tool.poetry]
name = "SmoothRPC"
version = "0.1.0"
description = ""
authors = ["weary <wearyspam@weary.nl>"]
readme = "README.md"
keywords = ["zmq", "rpc"]
packages = [{ include = "SmoothRPC" }]

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.7.3"
pyzmq = "^26.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "ANN101",
    "ANN102",
    "COM812",
    "D100",
    "D203",
    "D212",
    "EM101",
    "ERA001",
    "FA102",
    "ISC001",
    "T201",
    "TRY003",
]

[tool.ruff.format]

[tool.pytest.ini_options]
addopts = "--cov=SmoothRPC --cov-report html"