[tool.poetry]
name = "SmoothRPC"
version = "0.1.0"
description = "Decorator-based RPC library based on asyncio and a ZeroMQ backend."
authors = ["weary <wearyspam@weary.nl>"]
readme = "README.md"
keywords = ["zmq", "rpc"]
packages = [{ include = "smooth_rpc" }]

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.7.3"
pyzmq = "^26.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "ANN101",
    "ANN102",
    "COM812",
    "D203",
    "D212",
    "EM101",
    "ERA001",
    "FA102",
    "ISC001",
    "T201",
    "TRY003",
]

[tool.ruff.format]

[tool.ruff.lint.per-file-ignores]
# more lenient in tests
"tests/**.py" = [
    "D100",
    "D103",
    "PLR2004",
    "S101",
    "SLF001",
]

[tool.pytest.ini_options]
addopts = "--cov=smooth_rpc --cov-report html"

[tool.coverage.report]
fail_under=100